updated button border

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: sans-serif;
+}
+
 div {
     display: block;
 }
@@ -68,3 +72,8 @@ li a{
     float:left;
 }
 
+
+button {
+    background-color: #F5F5F5;
+    border: 1px solid lightgrey;
+}
